# Eco-Bags-Delivery-Optimizer

./: .env.example  .gitignore  AGENTS.md  FIXES_APPLIED.md  INITIAL_PROMPT.md  README.md  SCORING_CHANGES.md  SCORING_UPDATES_JAN2026.md  SECOND_PROMPT.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
config/: scoring_weights.json
data/config/: order_selector_config.json  routing_config.json  scoring_weights.json
data/geo/: localities.json  zones.json
data/processed/: delivery.db  extracted_receipts.json
notebooks/: 01_base_data_setup.ipynb  02_receipt_extraction.ipynb  03_priority_score.ipynb  04_order_selector.ipynb  05_route_optimizer.ipynb  doc_extractor_demo.ipynb
output/: priority_scores.csv
output/dispatches/: dispatch_candidates.json  dispatch_candidates_20260118_235605.json  dispatch_candidates_20260119_000210.json  dispatch_candidates_20260119_001915.json  dispatch_candidates_20260119_002404.json  dispatch_candidates_20260119_003304.json  dispatch_summary.csv  ranked_dispatches_with_routes.json  top_dispatch.json  top_dispatch_20260118_235605.json  top_dispatch_20260119_000210.json  top_dispatch_20260119_001915.json  top_dispatch_20260119_002404.json  top_dispatch_20260119_003304.json
output/maps/: best_single_zone_route.html  client_distribution.html  delivery_locations.html  linkedin_overview_map.html  linkedin_route_map.html  showcase_delivery_locations.html  (+2 more)
src/: __init__.py  app_utils.py  database.py  extract_receipts_for_app.py  extraction.py  geo.py  order_selector.py  routing.py  schemas.py  scoring.py
(+1 files in other folders)
