[tool.poetry]
name = "eco-bags-delivery-optimizer"
version = "0.1.0"
description = "Delivery optimization system for an eco-friendly bag factory"
authors = ["Developer <developer@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
pandas = "^2.0.0"
numpy = ">=2.0.2"
plotly = "^5.18.0"
folium = "^0.15.0"
geopy = "^2.4.0"
python-dotenv = "^1.0.0"
google-genai = "^1.0.0"
streamlit = "^1.41.0"
ortools = "^9.15.6755"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.0"
ipykernel = "^6.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
